--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,11 @@
     "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^7.5.0",
+    "react-pdf-js": "^5.1.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.0.8",
     "tailwindcss": "^3.3.3",
     "web-vitals": "^2.1.4"
   },
