--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,13 @@
-chromadb==0.4.13
-Flask==3.0.0
-Flask-Cors==4.0.0
-langchain==0.0.308
-numpy==1.26.0
-openai==0.28.1
-pypdf==3.16.2
-PyPDF2==3.0.1
-python-dotenv==1.0.0
-SQLAlchemy==2.0.21
-tiktoken==0.5.1
+chromadb
+Flask
+Flask-Cors
+langchain
+numpy
+openai
+pypdf
+PyPDF2
+python-dotenv
+SQLAlchemy
+tiktoken
 pysqlite3-binary
+gunicorn
